# advent_of_code

./: .gitignore
2015/ocaml/: .ocamlformat  aoc_2015.opam  dune-project
2024/_inputs/: 21.txt
2024/ocaml/: aoc_2024.opam  dune-project
2024/ocaml/day01/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day02/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day03/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day04/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day07/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day08/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day11/lib/: dune  solution1.ml  solution2.ml
2024/ocaml/day15/lib/: coordinates.ml  dune  solution1.ml  solution2.ml  warehouse.ml
2024/ocaml/lib/utils/: aoC.ml  dune
2024/ruby/: aoc.rb  run
2024/ruby/aoc_lib/: input_reader.rb
2024/ruby/day01/: Le Wagon x AoC.md  README.md  day1.rb
2025/ocaml/: aoc_2025.opam  dune-project
2025/ocaml/day01/: README.md
2025/ocaml/day01/lib/: dial.ml  dial.mli  dune  solution1.ml  solution2.ml
2025/ocaml/day02/: README.md
2025/ocaml/day02/lib/: dune  solution1.ml  solution2.ml
2025/ocaml/day03/: README.md
2025/ocaml/day03/lib/: dune  solution1.ml  solution2.ml
2025/ocaml/day04/: README.md
2025/ocaml/day04/lib/: dune  paper_roll.ml  solution1.ml  solution2.ml
2025/ocaml/day05/: README.md
2025/ocaml/day05/lib/: dune  range.ml  solution1.ml  solution2.ml
2025/ocaml/day06/: README.md
2025/ocaml/day06/lib/: dune  solution1.ml  solution2.ml
2025/ocaml/lib/utils/: aoC.ml  cell.ml  dune  grid.ml  matrix.ml
(+141 files in other folders)
