(lang dune 3.17)

(name aoc_2024)

(generate_opam_files true)

(source
 (github Lomig/advent_of_code))

(authors "Lomig")

(maintainers "Lomig")

(package
 (name aoc_2024)
 (synopsis "Advent of Code 2024 — Ocaml Edition")
 (depends ocaml dune)
 (tags
  (aoc ocaml)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
