(lang dune 3.20)

(name aoc_2025)

(generate_opam_files true)

(source
(github Lomig/advent_of_code))

(authors "Lomig")

(maintainers "Lomig")

(package
 (name aoc_2025)
 (synopsis "Advent of Code 2025 — Ocaml Edition")
 (depends ocaml containers)
 (tags
 (aoc ocaml)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
